// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing en <SearchScreen /> Debe mostrar a Batman y el input con el valor del queryString 1`] = `
<div>
  <h1
    className="publisher"
  >
    Búsqueda
  </h1>
  <hr />
  <div
    className="row animate__animated animate__fadeIn"
  >
    <div
      className="col-5"
    >
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="searchText"
          onChange={[Function]}
          placeholder="Busca un Heroe"
          type="text"
          value="batman"
        />
        <button
          className="btn m-1 btn-block btn-outline-primary"
          type="submit"
        >
           Buscar
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <hr />
      <div
        className="card ms-3 animate__animated animate__fadeIn"
        style={
          Object {
            "maxWidth": 540,
          }
        }
      >
        <div
          className="row no-gutters"
        >
          <div
            className="col-md-4"
          >
            <img
              alt="Batman"
              className="card-img"
              src="./assets/heroes/dc-batman.jpg"
            />
          </div>
          <div
            className="col-md-8"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                Batman
              </h5>
              <p
                className="card-text"
              >
                Bruce Wayne
              </p>
              <p
                className="card-text"
              >
                <small
                  className="text-muted"
                >
                  Detective Comics #27
                </small>
              </p>
              <a
                href="/hero/dc-batman"
                onClick={[Function]}
              >
                Más...
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing en <SearchScreen /> Debe mostrar un error si no se encuentra el Hero 1`] = `
<div>
  <h1
    className="publisher"
  >
    Búsqueda
  </h1>
  <hr />
  <div
    className="row animate__animated animate__fadeIn"
  >
    <div
      className="col-5"
    >
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="searchText"
          onChange={[Function]}
          placeholder="Busca un Heroe"
          type="text"
          value="batman123"
        />
        <button
          className="btn m-1 btn-block btn-outline-primary"
          type="submit"
        >
           Buscar
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <hr />
      <div
        className="alert alert-danger"
      >
        "
        batman123
        " No es nombre de Heroe valido :(
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing en <SearchScreen /> Mostrarse correctamente con valores por defecto 1`] = `
<div>
  <h1
    className="publisher"
  >
    Búsqueda
  </h1>
  <hr />
  <div
    className="row animate__animated animate__fadeIn"
  >
    <div
      className="col-5"
    >
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="searchText"
          onChange={[Function]}
          placeholder="Busca un Heroe"
          type="text"
          value=""
        />
        <button
          className="btn m-1 btn-block btn-outline-primary"
          type="submit"
        >
           Buscar
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <hr />
      <div
        className="spinner-border"
        role="status"
      >
        <span
          className="sr-only"
        >
          Loading...
        </span>
      </div>
    </div>
  </div>
</div>
`;
